# proxy-switcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  REVIEW.md  docker-compose.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
config/: proxy-switcher.docker.toml  proxy-switcher.service  proxy-switcher.toml
crates/proxy-cli/: Cargo.toml
crates/proxy-cli/src/: main.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: lib.rs
crates/proxy-core/src/config/: mod.rs
crates/proxy-core/src/dns/: mod.rs
crates/proxy-core/src/forwarder/: mod.rs
crates/proxy-core/src/health/: mod.rs
crates/proxy-core/src/packet/: REVIEW.md  ip.rs  mod.rs  tcp.rs
crates/proxy-core/src/pool/: mod.rs
crates/proxy-core/src/proxy/: mod.rs
crates/proxy-core/src/router/: connection.rs  mod.rs  udp.rs
crates/proxy-core/src/scraper/: mod.rs
crates/proxy-core/src/storage/: mod.rs
crates/proxy-core/src/tun_manager/: mod.rs
crates/proxy-daemon/: Cargo.toml
crates/proxy-daemon/src/: api.rs  main.rs
crates/proxy-daemon/tests/: packet_roundtrip.rs
crates/proxy-daemon/ui/: index.html
crates/proxy-daemon/ui/css/: app.css
crates/proxy-daemon/ui/js/: app.js
crates/proxy-test/: Cargo.toml
crates/proxy-test/src/: main.rs
crates/proxy-tun-test/: Cargo.toml
crates/proxy-tun-test/src/: main.rs
docs/: SUMMARY.md
docs/superpowers/plans/: 2026-06-22-phase1-core-foundation.md
docs/superpowers/specs/: 2026-06-22-proxy-core-enterprise-architecture.md  2026-06-22-proxy-switcher-design.md
scripts/: dev.sh  test-e2e-ns.sh  test-tun-ns.sh
