[package]
name = "proxy-daemon"
version = "0.1.0"
edition = "2021"
description = "Background daemon — TUN device, REST API, embedded Web UI"

[dependencies]
proxy-core = { path = "../proxy-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
axum.workspace = true
toml.workspace = true

# Static file serving
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Async
tokio-util = "0.7"
